[package]
name = "rustpilled-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
dotenvy = "0.15.7"
eyre = "0.6.8"
tokio = { version = "1.32.0", features = ["full"] }
twitch-irc = "5.0.1"
