[package]
name = "api"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
chrono = { version = "0.4.40", features = ["serde"] }
common = { path = "../common" }
diesel = { version = "2.2.9", features = ["postgres", "chrono", "uuid"] }
handlebars = { version = "6.3.2", features = ["dir_source"] }
include_dir = "0.7.4"
markdown = "0.3.0"
mime_guess = "2.0.5"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
twitch_api = { version = "0.7.2", features = ["twitch_oauth2", "reqwest", "helix"] }
uuid = "1.16.0"
