[package]
name = "bot"
description = "Multi-utility Twitch chat bot"
version.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-trait = "0.1.88"
chrono = "0.4.40"
diesel = { version = "2.2.9", features = ["postgres", "chrono", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
substring = "1.4.5"
tokio = { version = "1.44.2", features = ["full"] }
twitch-irc = "5.0.1"
twitch_api = { version = "0.7.2", features = ["twitch_oauth2", "helix", "reqwest", "eventsub"] }
version_check = "0.9.5"
log = "0.4.27"
uuid = "1.16.0"
compile-time = "0.2.0"
mlua = { version = "0.10.3", features = ["async", "luau", "send", "serialize"] }
reqwest = { version = "0.12.15", features = ["json", "multipart"] }
rand = "0.9.0"
env_logger = "0.11.8"
