[package]
name = "common"
description = "Common stuff like Diesel schemas and models are stored here"
version.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.9", features = ["postgres", "chrono", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
uuid = "1.16.0"
